# pman

./: .envrc  .gitignore  .gitmodules  Makefile  README  clib.json  extract_palette_colors.sh  meson.build  rgb-dev.sh  rgb.sh  test_parse_color_names.sh  vt.sh
bins/: aes0.c  assert0.c  b0.c  base640.c  bat0.c  bestline0.c  buffet0.c  case0.c  colors0.c  commander0.c  conf0.c  csplit0.c  csv0.c  dbg0.c  djbhash0.c  dotenv0.c  embedded0.c  events0.c  expand-braces0.c  field-range-parser.c  forever0.c  fort0.c  generic-print0.c  is-email0.c  json0.c  kat1.c  katmodule1.c  libansilove0.c  libconfuse0.c  liblogger0.c  list0.c  md50.c  memtrace0.c  new_bin.sh  parse_color_names_csv0.c  parse_color_names_csv0.c.unc-backup.md5~  parse_color_names_csv0.c.unc-backup~  path-join0.c  pman.c  pman0.c  (+25 more)
bins/aes/0/: meson.build
bins/assert/assert0/: assert0.c  meson.build
bins/assert/assert1/: assert1.c  meson.build
bins/base64/0/: base640.c  meson.build
bins/bat/0/: bat0.c  meson.build
bins/bestline/0/: bestline0.c  meson.build
bins/buffet/0/: buffet0.c  meson.build
bins/case/0/: case0.c  meson.build
bins/cembed/0/: cembed0.c  meson.build
bins/color_csv_parser/0/: color_csv_parser0.c  color_csv_parser0_defines.h  color_csv_parser0_globals.c  color_csv_parser0_includes.c  color_csv_parser0_modes.c  color_csv_parser0_module.c  color_csv_parser0_module.h  color_csv_parser0_module_logic.c  color_csv_parser0_module_setup.c  color_csv_parser0_types.h  meson.build
bins/color_csv_parser/1/: color_csv_parser1.c  color_csv_parser1_defines.h  color_csv_parser1_globals.c  color_csv_parser1_includes.c  color_csv_parser1_modes.c  color_csv_parser1_module.h  color_csv_parser1_module_logic.c  color_csv_parser1_module_setup.c  color_csv_parser1_types.h  meson.build
bins/colors/0/: meson.build
bins/commander/0/: meson.build
bins/conf/0/: meson.build
bins/csplit/0/: meson.build
bins/csv/0/: csv0.c  meson.build
bins/csv/1/: csv1.c  meson.build
bins/dbg/0/: dbg0.c  meson.build
bins/djbhash/0/: djbhash0.c  meson.build
bins/dotenv/0/: meson.build
bins/embedded/0/: embedded0.c  meson.build
bins/events/0/: meson.build
bins/forever/0/: meson.build
bins/fort/0/: fort0.c  meson.build
bins/generic-print/0/: generic-print0.c  meson.build
bins/json/json0/: json0.c  meson.build
bins/kat/0/: kat0.c  meson.build
bins/kat/1/: meson.build
bins/katmodule/0/: katmodule0.c  meson.build
bins/katmodule/1/: meson.build
bins/libansilove/0/: libansilove0.c  meson.build
bins/libansilove/1/: libansilove1.c  meson.build
bins/list/0/: meson.build
bins/md5/0/: meson.build
bins/memtrace/0/: meson.build
bins/module/module0/: meson.build  module0.c
bins/module/module1/: meson.build
bins/regex/0/: meson.build
bins/rgbpng/0/: meson.build  rgbpng0.c
bins/scriptexec/0/: meson.build
bins/socket/0/: meson.build  socket0.c
bins/spin/0/: meson.build  spin0.c
bins/spin/1/: meson.build
bins/subhook/0/: meson.build  subhook0.c
bins/subprocess/0/: meson.build
bins/tempdir/0/: meson.build  tempdir0.c
bins/template/0/: meson.build  template0.c
bins/terminput/0/: meson.build  terminput0.c
bins/test/0/: meson.build  test0.c
bins/tmt/0/: meson.build  tmt0.c
bins/uptime/0/: meson.build  uptime0.c
bins/url/0/: meson.build  url0.c
bins/usb/0/: meson.build  usb0.c
bins/vterm/0/: meson.build  vterm0.c
bins/xargs/0/: meson.build
docker/: Dockerfile  build.sh  run.sh
etc/: .gitignore  colornames.csv  colornames.csv.tar.bz2  conf0.conf  generate-color-log-cmds.sh  generate_color_logs.sh
etc/tpl/: color-names0.tpl  t0.tpl  t1.tpl
etc/tpl/color-name/: color-name.tpl
etc/tpl/color-names/: color-names.tpl
include/: ansicodes.h  dbg.h  defines.h  embedded-colornames-base.h  embedded-palettes.h  errnos.h  fort.h  includes-module.h  includes-pman-ansi.h  includes-pman.h  includes.h  int.h  katmodule0.h  katmodule1.h  macros.h  module0.h  pman.h  pman0-defines.h  pman0-types.h  pman0.h  print.h  print.h.orig  strconv.h  timequick.h  tmt.h  types.h  utils.h
include/template/: hashmap.h  mpc.h  template.h  vector.h
scripts/: clib-cmds.sh  clib-install.sh  dev.sh  find-bins.sh  find-deps.sh  submodule-cmds.sh  test-tmt0.sh  test.sh  tidy.sh
src/: args.c  colorcodes.c  datetime.c  fort.c  globals.c  includes-pman-ansi.c  includes.c  init.c  int.c  katmodule0.c  katmodule1.c  main.c  modes.c  module0.c  palettes.c  parse_color_names_csv.c  pman-init.c  pman-utils.c  pman.c  pman0-args.c  pman0-globals.c  pman0-init.c  pman0-main.c  pman0-utils.c  tmt.c  utils.c  vt.c  vterm.c
src/template/: hashmap.c  mpc.c  template.c  vector.c
submodules/cembed/: cembed
